# aaf_deployment

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
aaf_bellbot/: CMakeLists.txt
aaf_bellbot/conf/: bellbot_voice.yaml  destinations_types.yaml  locale.ini
aaf_bellbot/launch/: aaf_bellbot.launch  bellbot.launch
aaf_bellbot/scripts/: start_bellbot.py
aaf_bringup/: CMakeLists.txt
aaf_bringup/conf/: mongodb_extras.yaml  watchdog.yaml
aaf_bringup/launch/: aaf_control_pc.launch  aaf_core.launch  aaf_deployment_control.launch  aaf_launch_server.launch  aaf_media_server.launch  aaf_navigation.launch  aaf_navigation_han.launch  aaf_remap.launch  aaf_routine.launch  aaf_ui.launch  battery_log.launch
aaf_bringup/resources/: aaf_HAN_y4.yaml  aaf_WG_y4.tplg  aaf_deployment.yaml  aaf_deployment16.yaml  aaf_y4.tplg  aaf_y4N.tplg  y4_aaf.yaml
aaf_bringup/scripts/: aaf_start.sh  aaf_start_bellbot_sim.sh  deployment_control.py  save_and_upload_maps.py  set_henry_voice.py  topic_monitor.py
aaf_control_ui/scripts/: server.py
aaf_control_ui/www/: admin.html  dashboard.html  tasks.html
aaf_logging/: CMakeLists.txt  package.xml
aaf_logging/action/: StoreAndWait.action
aaf_logging/config/: logged_topics.yaml  white_list_aaf.yaml
aaf_logging/launch/: logging.launch  topics.launch  topics_launch.launch
aaf_logging/launch/axlaunch/: loggers.launch.xml
aaf_logging/scripts/: create_white_list_from_tags.py  filter_rosout.py  logging_script_server.py  run_aaf_logger.bash  start_stop_logging.py  store_logs_task.py
aaf_monitor_logs/: CMakeLists.txt  package.xml
aaf_monitor_logs/scripts/: monitor_logs.py
aaf_music_player/: CMakeLists.txt  package.xml
aaf_simulation/: CMakeLists.txt  Readme.md  package.xml
aaf_simulation/launch/: aaf_navigation.launch
aaf_simulation/maps/: aaf_sim.tmap  aaf_simulation.yaml  sim_deployment16.yaml
aaf_walking_group/: CMakeLists.txt  README.md  package.xml
aaf_walking_group/action/: Guiding.action  Interface.action  MapInterface.action  StateMachine.action  WalkingGroup.action
aaf_walking_group/cfg/: Legibility.cfg
aaf_walking_group/conf/: demo.yaml  recovery_whitelist.yaml  tour.yaml  waypoint_sounds.yaml  waypoints.yaml
aaf_walking_group/doc/: card.fig
aaf_walking_group/etc/: walking_group_tasks.yaml  walking_groups.yaml
aaf_walking_group/launch/: task_servers.launch  walking_group.launch
aaf_walking_group/launch/axlaunch/: walking_group.launch.xml
aaf_walking_group/scripts/: aaf_walking_group_state_machine.py  guiding_action.py  image_server.py  insert_yaml.py  interface_demo.py  interface_server.py  map_interface_server.py  media_server.py  positionOfCard.py  start_walking_group.py  wait_for_participant.py  walking_group_recovery_feedback.py  walking_gui_demo.py  walking_gui_server.py
aaf_walking_group/src/aaf_walking_group/: entertain.py  final_approach.py  guide_interface.py  guiding.py  reached_resting_point.py  resting_chair_selection.py  utils.py  waypoint_manager.py
aaf_walking_group/srv/: Button.srv  GetMediaId.srv
aaf_walking_group/www/: aaf_map.html  ambulanz_map.html  continue_page.html  ende.html  entertainment.html  frisoer_map.html  guiding.html  guiding_chair.html  guiding_gauge.html  image.html  kapelle_map.html  left.html  navigation.html  rast.html  right.html  song.html  stop.html  straight.html  teekueche_map.html  turn_left.html  turn_right.html  video.html  walking_group.css  warte.html
aaf_walking_group/www/img/: button_abbruch.xcf  button_ende.xcf  button_lauter.xcf  button_leiser.xcf  button_liste.xcf  button_liste_notext.xcf  button_map.xcf  button_musik.xcf  button_musik_off.xcf  button_musik_on.xcf  button_rast.xcf  button_rast_left.xcf  button_rast_right.xcf  button_rast_select.xcf  button_start.xcf  button_stopp.xcf  button_weiter_up.xcf  map.xcf  sheetmusic.xcf  sitting_person.xcf  walkinggroup.xcf
aaf_waypoint_sounds/: CMakeLists.txt  package.xml  setup.py
aaf_waypoint_sounds/launch/: waypoint_sounds.launch
aaf_waypoint_sounds/scripts/: aaf_waypoint_player.py
aaf_waypoint_sounds/src/aaf_waypoint_sounds/: __init__.py  aaf_waypoint_player.py
aaf_waypoint_sounds/srv/: WaypointSoundsService.srv
action/: .Guiding.action.swp  Guiding.action  StateMachine.action
approach_person_of_interest/: CMakeLists.txt  package.xml  setup.py
conf/: tour.yaml
expert_interventions/: expert_interventions.md
face_analysis/: CMakeLists.txt  README.md  package.xml
face_analysis/scripts/: active_engaged_analysis.py  extract_video_data.py  opencv_tools.py  passive_engaged_analysis.py  people_perception2person_trajectory.py
info_terminal/info_task/: CMakeLists.txt  setup.py
info_terminal/info_task/cfg/: tasks.yaml
info_terminal/info_task/msg/: Clicks.msg
info_terminal/info_task/scripts/: info_task_server.py  start_stop_info_terminal.py
info_terminal/info_task/src/info_task/: utils.py
info_terminal/infremen/: CMakeLists.txt  README.md  package.xml
info_terminal/infremen/cfg/: infremen.cfg
info_terminal/infremen/msg/: AtomicInteraction.msg  InfremenResult.msg
info_terminal/infremen/src/: CFrelement.cpp  CFrelementSet.cpp  CFrelementSet.h  CGraph.cpp  CGraph.h  CTimer.cpp  CTimer.h  graph.cc  graph.h  infremen.cpp  modelgt.cc  modelgt.h  modelmultigt.cc  modelmultigt.h  simpleworldsimulator.cc  worldsimulator.cc  worldsimulator.h
info_terminal/infremen/srv/: CreateInFremenTask.srv
infremen/: CMakeLists.txt  package.xml
infremen/src/: .infremen.cpp.swp  CFrelement.cpp  CFrelementSet.cpp  CFrelementSet.h  infremen.cpp
launch/: interface.launch  walking_group.launch  waypoint_sounds.launch
scripts/: aaf_walking_group_state_machine.py  guiding_action.py  interface_demo.py  interface_server.py  positionOfCard.py  wait_for_participant.py  walking_gui_server.py
tools/: check-disk.sh  crontab-henry  network-recover.sh  owncloud-upload.sh
voice_output/: CMakeLists.txt
www/: abort.html  example.html  guiding.html  next_waypoint.html  song.html  straight.html  turn_left.html  turn_right.html  video.html  walking_group.css  waypoint_listing.html
(+71 files in other folders)
